--- a/tailwind.css
+++ b/tailwind.css
@@ -1,51 +1,29 @@
 @tailwind base;
 
-@tailwind components;
-
-@tailwind utilities;
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-html {
-  font-size: 112.5%; /*18px*/
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+  @apply h-screen;
 }
 
 body {
-  background-color: white;
-  font-family: "Advent Pro", sans-serif;
-  font-weight: 400;
-  line-height: 1.65;
+  @apply font-body;
 }
 
 h1,
 h2,
 h3,
-h4,
-h5 {
-  font-family: "Merienda One", cursive;
-  line-height: 1.15;
-}
-
-h1 {
-  font-size: 4.209em;
-}
-
-h2 {
-  font-size: 3.157em;
-}
-
-h3 {
-  font-size: 2.369em;
-}
-
 h4 {
-  font-size: 1.777em;
+  @apply font-heading;
 }
 
-small,
-.text_small {
-  font-size: 0.75em;
+a {
+  @apply no-underline;
+  @apply text-white;
+  @apply text-lg;
 }
+
+@tailwind components;
+
+@tailwind utilities;
