--- a/tailwind.css
+++ b/tailwind.css
@@ -18,6 +18,22 @@ h4 {
   @apply font-heading;
 }
 
+h1 {
+  @apply text-6xl;
+}
+
+h2 {
+  @apply text-5xl;
+}
+
+h3 {
+  @apply text-4xl;
+}
+
+h4 {
+  @apply text-3xl;
+}
+
 a {
   @apply no-underline;
   @apply text-white;
