--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -48,7 +48,9 @@ button {
   @apply uppercase;
   @apply bg-orange;
   @apply rounded-full;
-  @apply p-3;
+  @apply px-3;
+  @apply py-5;
+  @apply font-heading;
   @apply text-white;
   transition: all 150ms linear;
 }
@@ -149,4 +151,18 @@ header nav li a {
 
 ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
   border-color: #640a13 transparent transparent transparent;
+}
+
+/*! Number input remove arrows */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
