--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -13,6 +13,8 @@ body,
 
 body {
   @apply font-body;
+  @apply overflow-x-hidden;
+  @apply max-w-full;
 }
 
 h1,
@@ -102,6 +104,10 @@ header nav li a {
   transform: translate(-50%, -50%);
 }
 
+.top-25 {
+  top: 25%;
+}
+
 .top-125 {
   top: 125px;
 }
@@ -122,6 +128,10 @@ header nav li a {
   text-shadow: 0 3px rgba(0, 0, 0, 0.8), 0 0 5px rgba(0, 0, 0, 0.9);
 }
 
+.bg-clear-top {
+  top: 125px;
+}
+
 .bg-clear {
   top: 600px;
 }
@@ -138,68 +148,4 @@ path {
 
 .icon:hover > circle {
   fill: #ff7800;
-}
-
-/*! SCROLLBARS */
-* {
-  scrollbar-color: #a50022 black;
-}
-
-::-webkit-scrollbar {
-  width: 14px;
-}
-
-::-webkit-scrollbar-track {
-  background: black;
-}
-
-::-webkit-scrollbar-thumb {
-  width: 13px;
-  background: #a50022;
-  border-left: 1px solid black;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #640a13;
-}
-
-/* Buttons */
-::-webkit-scrollbar-button:single-button {
-  background-color: black;
-  display: block;
-  border-style: solid;
-  height: 13px;
-  width: 16px;
-}
-/* Up */
-::-webkit-scrollbar-button:single-button:vertical:decrement {
-  border-width: 0 8px 8px 8px;
-  border-color: transparent transparent #a50022 transparent;
-}
-
-::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
-  border-color: transparent transparent #640a13 transparent;
-}
-/* Down */
-::-webkit-scrollbar-button:single-button:vertical:increment {
-  border-width: 8px 8px 0 8px;
-  border-color: #a50022 transparent transparent transparent;
-}
-
-::-webkit-scrollbar-button:vertical:single-button:increment:hover {
-  border-color: #640a13 transparent transparent transparent;
-}
-
-/*! Number input remove arrows */
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
 }
