--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -149,3 +149,15 @@ path {
 .icon:hover > circle {
   fill: #ff7800;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
