shapes, gap replacement, opactiy on nav

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -161,3 +161,65 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.custom-shape-divider-top-1594131228 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1594131228 svg {
+  position: relative;
+  display: block;
+  width: calc(195% + 1.3px);
+  height: 54px;
+}
+
+.custom-shape-divider-top-1594131228 .shape-fill {
+  fill: #ffffff;
+}
+
+.custom-shape-divider-bottom-1594131361 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1594131361 svg {
+  position: relative;
+  display: block;
+  width: calc(195% + 1.3px);
+  height: 54px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1594131361 .shape-fill {
+  fill: #ffffff;
+}
+
+.custom-shape-divider-top-1594131229 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1594131229 svg {
+  position: relative;
+  display: block;
+  width: calc(195% + 1.3px);
+  height: 54px;
+}
+
+.custom-shape-divider-top-1594131229 .shape-fill {
+  fill: #ffffff;
+}
