--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -93,6 +93,20 @@ header nav li a {
 }
 
 /*! CUSTOM CSS */
+.menu {
+  background: rgba(100, 10, 19, 0.8);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(40px);
+}
+
+@media only screen and (min-width: 930px) {
+  .menu {
+    background: transparent;
+    box-shadow: none;
+    backdrop-filter: blur(0);
+  }
+}
+
 .email {
   top: 35%;
   right: 75px;
