--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -8,7 +8,7 @@ html,
 body,
 #___gatsby,
 #gatsby-focus-wrapper {
-  @apply h-screen;
+  @apply h-full;
 }
 
 body {
@@ -235,6 +235,7 @@ input[type="number"] {
 
 .custom-shape-divider-top-1594131229 {
   position: absolute;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
@@ -251,5 +252,27 @@ input[type="number"] {
 }
 
 .custom-shape-divider-top-1594131229 .shape-fill {
+  fill: #ffffff;
+}
+
+.custom-shape-divider-top-1594131220 {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1594131220 svg {
+  position: relative;
+  display: block;
+  width: calc(195% + 1.3px);
+  height: 54px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1594131220 .shape-fill {
   fill: #ffffff;
 }
