--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -137,7 +137,7 @@ header nav li a {
 }
 
 .gtc {
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
 }
 .icon:hover > path {
   fill: #ffffff;
