--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -248,3 +248,15 @@ path {
   height: 54px;
   transform: rotateY(180deg);
 }
+
+.img-grid {
+  background-size: cover;
+  background-position: center;
+  grid-row: 1/-1;
+  grid-column: 2;
+}
+
+.text-grid {
+  grid-row: 1/-2;
+  grid-column: 1;
+}
