--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -130,7 +130,13 @@ header nav li a {
 }
 
 .gtc {
-  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+@media only screen and (max-width: 640px) {
+  .gtc {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+  }
 }
 
 .icon:hover > path {
